# rust-web

./: .env  Cargo.toml  Procfile  README.md  RustConfig  build.bat  buildpack-run.sh
frontend/: Cargo.toml
frontend/src/: components.rs  lib.rs  pages.rs
frontend/src/components/: button.rs  navbar.rs
frontend/src/pages/: home.rs
models/: Cargo.toml
models/src/: lib.rs  models.back
src/: back  filters.rs  handlers.rs  main.rs
static/: .gitignore  index.html
