[package]
name = "rust-web"
version = "0.1.0"
authors = ["Naum Azeredo <naumazeredo@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.8"
dotenv = "0.15"
warp = "0.2"
parking_lot = "0.11"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros"] }
#diesel = { version = "1.4", features = ["sqlite"] }
